--- a/capstone-backend/package.json
+++ b/capstone-backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "node-ssh": "^13.1.0",
     "ssh2": "^1.14.0"
